5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1643_2703.log
== TEST (2019-04-06 19:43:32) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18 ):
	
-- ERROR:
File "XXXX", line 4
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:46:55) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18 ):
	 idade = eleitor
else:
	idade = nao_eleitor
print(idade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    idade = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:46:55) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18 ):
	 idade = eleitor
else:
	idade = nao_eleitor
print(idade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    idade = nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 19:55:51) 
-- CODE:
idade = int(input("idade: "))
opcao = input("eleitor? (s/n)")
if(opcao.lower()== s ):
	idade = eleitor
	
print(idade)
	
	 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    opcao = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:01:32) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print(eleitor)
else:
	print(nao eleitor)

	
	 

-- ERROR:
File "XXXX", line 6
    print(nao eleitor)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:01:51) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print(eleitor)
else:
	print(nao eleitor)

	
	 

-- ERROR:
File "XXXX", line 6
    print(nao eleitor)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:02:03) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print(eleitor)
else:
	print("nao eleitor")

	
	 

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:02:24) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print("eleitor")
else:
	print("nao eleitor")

	
	 

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:02:37) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print("eleitor")
else:
	print("nao eleitor")

	
	 

-- EXECUTION TIME:
0.266437
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 20:02:55) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print("eleitor")
else:
	print("nao eleitor")

	
	 

-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 20:03:06) 
-- CODE:
idade = int(input("idade: "))

if(idade >= 18 ):
	print("eleitor")
else:
	print("nao eleitor")

	
	 

-- EXECUTION TIME:
0.122538
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:14:05) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print(eleitor)
else:
	print(nao eleitor)


-- ERROR:
File "XXXX", line 5
    print(nao eleitor)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:14:29) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print(eleitor)
else:
	print(nao_eleitor)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:15:03) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:15:23) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- EXECUTION TIME:
0.133894
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:16:17) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 00:16:32) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- EXECUTION TIME:
0.197438
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 00:16:37) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:27:47) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:28:14) 
-- CODE:
idade = int(input("idade: "))
if(idade > 18):
	print("eleitor")
else:
	print("nao_eleitor")


-- EXECUTION TIME:
0.136693
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
